--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,14 @@ export(CV_Tune)
 export(Cat_Eval)
 export(Cont_Eval)
 export(Count_Eval)
+export(MTPart)
+export(MTPartSummary)
+export(MTPrune)
+export(MTSummary)
+export(MTTest)
 export(MultiEval)
+export(PlotTree)
+export(SplitPrep)
 export(Surv_Eval)
 import(Hmisc)
 import(Metrics)
@@ -20,6 +27,8 @@ import(reshape2)
 import(stats)
 import(stringr)
 import(survival)
+importFrom("caret::cluster","exclude=TRUE")
+importFrom("caret::recall","exclude=TRUE")
 importFrom(stats,complete.cases)
 importFrom(stats,deviance)
 importFrom(stats,gaussian)
